...
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#509f1a71"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/apply_thesaurus"
                    android:text="Thesaurus"
                    android:textSize="10sp"
                    android:padding="0dip"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
...
