...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsck.k9.activity.AddContact">

    <EditText
        android:id="@+id/add_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter first Name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/add_contact_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter last name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/add_contact_name"/>

    <EditText
        android:id="@+id/add_contact_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Enter email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/add_contact_lastName"/>

    <Button
        android:id="@+id/save_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save contact"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/add_contact_email"/>

    <TextView
        android:id="@+id/invalid_email"
...
